cmake_minimum_required(VERSION 3.10)
set(CMAKE_CXX_EXTENSIONS OFF)
set(CMAKE_C_COMPILER gcc)
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_COMPILER g++)
set(CMAKE_CXX_FLAGS -Wall)
set(CMAKE_SCAN_FOR_MODULES)
project(test)

set(COMMON_SOURCES data_block.cpp mixer.cpp track.cpp track_manager.cpp group_manager.cpp track_manager_states.cpp group_manager_states.cpp input_gpio.cpp output_i2c.cpp audio_jack.cpp)
## set(TARGET_SOURCES main.cpp)
set(TEST_SOURCES_MIXER test_mixer.cpp)
set(TEST_SOURCES_TRACK test_track.cpp)
set(TEST_TT test_test_track.cpp)
set(TEST_SOURCES_TRACK_MANAGER test_track_manager.cpp)
set(TEST_SOURCES_GROUP_MANAGER test_group_manager.cpp)
set(TEST_SOURCES_STATE_MACHINE test_state_machine.cpp)
set(TEST_GMTT test_group_manager_state_machine.cpp)
set(TEST_GPIO gpio_main.cpp)

## add_executable(application ${COMMON_SOURCES} ${TARGET_SOURCES})

## TEST COMPILATIONS - add the extra defines for debug output
add_compile_definitions(DTEST_TM)
add_compile_definitions(DTEST_GM)
add_compile_definitions(DTEST_VERBOSE)
## add_compile_definitions(DTEST_VERBOSE_GM)
## add_compile_definitions(DTEST_GPIO_VERBOSE)
## add_compile_definitions(DTEST_VERBOSE_EXTRA)
## add_compile_definitions(DTEST_TM_VERBOSE)

add_executable(test_state_machine ${COMMON_SOURCES} ${TEST_SOURCES_STATE_MACHINE})

add_executable(test_mixer ${COMMON_SOURCES} ${TEST_SOURCES_MIXER})
add_executable(test_track ${COMMON_SOURCES} ${TEST_SOURCES_TRACK})
add_executable(test_track_manager ${COMMON_SOURCES} ${TEST_SOURCES_TRACK_MANAGER})
add_executable(test_group_manager ${COMMON_SOURCES} ${TEST_SOURCES_GROUP_MANAGER})
add_executable(ttt ${COMMON_SOURCES} ${TEST_TT})
add_executable(gtt ${COMMON_SOURCES} ${TEST_GMTT})
add_executable(gpio ${COMMON_SOURCES} ${TEST_GPIO})

find_library(wiringPi_LIB wiringPi)
find_library(jackaudio_LIB jack)
target_link_libraries(gpio ${wiringPi_LIB} ${jackaudio_LIB})
target_link_libraries(test_state_machine ${wiringPi_LIB} ${jackaudio_LIB})
target_link_libraries(test_mixer ${wiringPi_LIB} ${jackaudio_LIB})
target_link_libraries(test_track ${wiringPi_LIB} ${jackaudio_LIB})
target_link_libraries(test_track_manager ${wiringPi_LIB} ${jackaudio_LIB})
target_link_libraries(test_group_manager ${wiringPi_LIB} ${jackaudio_LIB})
target_link_libraries(ttt ${wiringPi_LIB} ${jackaudio_LIB})
target_link_libraries(gtt ${wiringPi_LIB} ${jackaudio_LIB})

target_compile_definitions(test_mixer PUBLIC DTEST_AIS)
target_compile_definitions(test_track PUBLIC DTEST_TM_AIS)
target_compile_definitions(test_track_manager PUBLIC DTEST_TM_AIS)
target_compile_definitions(test_group_manager PUBLIC DTEST_TM_AIS)
target_compile_definitions(gpio PUBLIC DTEST_GPIO)

## target_link_libraries(test PRIVATE wiringPi etc.. normal g++ -l items)
